k8s/valkey-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  labels:
    app: valkey
spec:
  clusterIP: None
  selector:
    app: valkey
  ports:
    - name: tcp
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: valkey
spec:
  serviceName: valkey
  replicas: 2
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: valkey
          image: valkey/valkey:7
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data
          command: ["/bin/sh", "-c"]
          args:
            - |
              set -e
              if [ "$POD_NAME" = "valkey-0" ]; then
                echo "Iniciando PRIMARY"
                exec valkey-server --appendonly yes --dir /data
              else
                echo "Iniciando REPLICA apuntando a valkey-0"
                exec valkey-server --appendonly yes --dir /data --replicaof valkey-0.valkey 6379
              fi
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        # storageClassName: standard-rwo   # usa esto solo si tu PVC queda Pending
